Adjusted Css to stop overflowing of text

--- a/LikkleDeedsOfKindness/static/css/main.css
+++ b/LikkleDeedsOfKindness/static/css/main.css
@@ -14,6 +14,11 @@ body{
     height: 80vh;
 } */
 
+div{
+    /* should stop texting overflowing globally as long as wrapped with a div */
+    word-wrap: break-word ;
+}
+
 #call-to-action{
     margin-top: 9rem;
     max-width: 50%;
